--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
-  "name": "PoL",
-  "version": "1.0.0",
-  "description": "A JavaScript project",
-  "main": "./dist/index.js",
+  "name": "proof-of-liability-demo",
+  "version": "0.1.0",
+  "description": "A demo of Proof of Liability in WebAssembly",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/parcel-bundler/bin/cli serve ./src/index.html --port 8080",
-    "build": "node ./node_modules/parcel-bundler/bin/cli build ./src/index.html --out-dir ./dist/",
-    "lint": "node ./node_modules/eslint/bin/eslint . --ext .js --fix"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+git@github.com:ronkah/PoL.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "zero-knowledge",
+    "zkproof",
+    "cryptography",
+    "webassembly",
+    "wasm",
+    "golang",
+    "Proof",
+    "rust"
+  ],
+  "author": "Ron Kahat <ron.kahat@celsius.network>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ronkah/PoL"
+  },
+  "homepage": "https://ronkah.github.io/PoL/",
   "devDependencies": {
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "parcel-bundler": "^1.12.5"
+    "copy-webpack-plugin": "^5.0.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "http-server": "^0.11.1",
+    "jquery": "^3.4.1"
   }
 }
