--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "Proof",
     "rust"
   ],
-  "author": "Ron Kahat <ron.kahat@celsius.network>",
+  "author": "Ron Kahat <ron.kahat@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ronkah/PoL"
